<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:elevation="@dimen/cardview_default_elevation">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productmin">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/boldcolor_foreground"
            android:id="@+id/imgPreviews"
            android:background="@color/teal_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/Medicinii"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgPreviews"
            android:text="@string/medicine_nameer"
            android:textColor="@color/background_palet1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingStart="10dp"/>
        <TextView
            android:id="@+id/Mediciniitxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicine_1"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:layout_toEndOf="@id/Medicinii"
            android:layout_alignBaseline="@id/Medicinii"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />
        <ImageView
            android:id="@+id/btnexpand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drop_downer"
            android:layout_alignParentEnd="true"
            android:paddingEnd="10dp"
            android:layout_alignBaseline="@id/Mediciniitxt"/>



</RelativeLayout>
    <RelativeLayout
        android:id="@+id/productexp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/productmin"
        android:visibility="gone">

        <TextView
            android:paddingTop="5dp"
            android:id="@+id/MediciniiPrices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicine_price"
            android:textStyle="bold"
            android:textColor="@color/background_palet1"
            android:textSize="16sp"
            android:paddingStart="10dp"/>
        <TextView
            android:id="@+id/MediciniiPricestxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:text="@string/_400_00_lkr"
            android:layout_toEndOf="@id/MediciniiPrices"
            android:textStyle="bold"
            android:layout_alignBaseline="@id/MediciniiPrices"
            android:paddingStart="20dp"/>

        <Switch
            android:id="@+id/btnSoldOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/MediciniiPricestxt"
            android:ems="10"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:showText="true"
            android:switchTextAppearance="@style/Widget.Material3.CompoundButton.Switch"
            android:text="Visible to Public"
            android:textColor="@color/background_palet1"
            android:textOff="@string/soldout"
            android:textOn="@string/visible"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:checked="true"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml"
            tools:text="Visible to Public" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDeleteProduct"
            android:layout_below="@id/btnSoldOut"
            android:backgroundTint="@color/background_palet1"
            android:textColor="@color/white"
            android:text="@string/delete_product"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMinimize"
            android:src="@drawable/drop_upper"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/btnDeleteProduct"
            android:paddingEnd="10dp"/>


    </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>